--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -1,3 +1,5 @@
+<app-toolbar [list]="listOfMovieTitles"></app-toolbar>
+
 <div class="movies-container">
   <div *ngFor="let movie of movies" class="movie-card">
     <mat-card>
