--- a/src/app/movie/movie.component.scss
+++ b/src/app/movie/movie.component.scss
@@ -1,17 +1,25 @@
 mat-card {
   background-color: white;
+  border: 1px solid black;
 }
 
 .movies-container {
-  margin-top: 20px;
   display: flex;
   flex-wrap: wrap;
-  gap: 16px;
+  gap: 20px;
   padding: 0 16px;
 }
 
 .movie-card {
   max-width: 300px;
+  min-width: 200px;
   flex: 1 1 calc(33.333% - 32px);
   box-sizing: border-box;
+}
+
+.search-bar {
+  padding: 20px;
+  min-width: 150px;
+  max-width: 300px;
+  width: 100%;
 }
