--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -1,7 +1,12 @@
 <mat-form-field class="search-bar" appearance="outline">
   <mat-label>Search...</mat-label>
   <mat-icon matPrefix>search</mat-icon>
-  <input matInput type="text" [(ngModel)]="searchValue" (keyup)="filterMovies()" />
+  <input
+    matInput
+    type="text"
+    [(ngModel)]="searchValue"
+    (keyup)="searchMovies()"
+  />
   <button
     *ngIf="searchValue"
     matSuffix
@@ -12,6 +17,19 @@
     <mat-icon>close</mat-icon>
   </button>
 </mat-form-field>
+
+<div class="chip-container">
+  <mat-chip-set aria-label="Movie category selection">
+    <mat-chip-option
+      *ngFor="let category of movieCategories"
+      [value]="category.name"
+      [class.selected]="category.selected"
+      (selectionChange)="selectChip($event, category)"
+    >
+      {{ category.name }}
+    </mat-chip-option>
+  </mat-chip-set>
+</div>
 
 <div class="movies-container">
   <div *ngFor="let movie of filteredMovies" class="movie-card">
