--- a/src/app/movie/movie.component.scss
+++ b/src/app/movie/movie.component.scss
@@ -18,8 +18,13 @@ mat-card {
 }
 
 .search-bar {
-  padding: 20px;
+  padding: 20px 20px 0 20px;
   min-width: 150px;
   max-width: 300px;
+  width: 100%;
+}
+
+.chip-container {
+  padding: 0 20px 20px 20px;
   width: 100%;
 }
