--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -38,6 +38,8 @@
         <mat-card-title>{{ movie.title }}</mat-card-title>
       </mat-card-header>
       <mat-card-content>
+        <p>{{ movie.releaseYear }}</p>
+        <p>{{ movie.genre }}</p>
         <p>{{ movie.director }}</p>
       </mat-card-content>
     </mat-card>
