fixing formatting and introducing movie-edit component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-toolbar></app-toolbar>
-<app-movie></app-movie>
 
-<router-outlet />
+<div class="content-container">
+  <router-outlet></router-outlet>
+</div>
