--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -35,10 +35,25 @@
   <div *ngFor="let movie of filteredMovies" class="movie-card">
     <mat-card>
       <mat-card-header>
-        <mat-card-title>{{ movie.title }}</mat-card-title>
+        <mat-card-title-group>
+          <mat-card-title>{{ movie.title }}</mat-card-title>
+          <mat-card-subtitle>{{ movie.releaseYear }}</mat-card-subtitle>
+        </mat-card-title-group>
+        <button mat-icon-button [matMenuTriggerFor]="menu">
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item (click)="navigateToMovie(movie.id)">
+            <mat-icon>edit</mat-icon>
+            <span>Edit</span>
+          </button>
+          <button mat-menu-item (click)="deleteMovieRequest(movie)">
+            <mat-icon>delete</mat-icon>
+            <span>Delete</span>
+          </button>
+        </mat-menu>
       </mat-card-header>
-      <mat-card-content>
-        <p>{{ movie.releaseYear }}</p>
+      <mat-card-content class="movie-card-content">
         <p>{{ movie.genre }}</p>
         <p>{{ movie.director }}</p>
       </mat-card-content>
