--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -37,7 +37,7 @@
       <mat-card-header>
         <mat-card-title-group>
           <mat-card-title>{{ movie.title }}</mat-card-title>
-          <mat-card-subtitle>{{ movie.releaseYear }}</mat-card-subtitle>
+          <mat-card-subtitle>{{ movie.releaseYear | date }}</mat-card-subtitle>
         </mat-card-title-group>
         <button mat-icon-button [matMenuTriggerFor]="menu">
           <mat-icon>more_vert</mat-icon>
