--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -1,22 +1,6 @@
-<mat-form-field class="search-bar" appearance="outline">
-  <mat-label>Search...</mat-label>
-  <mat-icon matPrefix>search</mat-icon>
-  <input
-    matInput
-    type="text"
-    [(ngModel)]="searchValue"
-    (keyup)="searchMovies()"
-  />
-  <button
-    *ngIf="searchValue"
-    matSuffix
-    mat-icon-button
-    aria-label="Clear"
-    (click)="clearSearch()"
-  >
-    <mat-icon>close</mat-icon>
-  </button>
-</mat-form-field>
+<app-seach-bar
+  (searchValueChange)="onSearchValueChange($event)"
+></app-seach-bar>
 
 <app-category (applyChipsEvent)="onApplyChips($event)"></app-category>
 
