--- a/src/app/categories/category.component.html
+++ b/src/app/categories/category.component.html
@@ -1,12 +1,14 @@
-<div class="chip-container">
-  <mat-chip-set aria-label="Movie category selection">
-    <mat-chip-option
-      *ngFor="let category of categories"
-      [value]="category.name"
-      [class.selected]="category.selected"
-      (selectionChange)="selectChip($event, category)"
-    >
-      {{ category.name }}
-    </mat-chip-option>
-  </mat-chip-set>
-</div>
+<ng-container *ngIf="categories$ | async as categories">
+  <div class="chip-container">
+    <mat-chip-set aria-label="Movie category selection">
+      <mat-chip-option
+        *ngFor="let category of categories; trackBy: trackByCategoryId"
+        [value]="category.name"
+        [class.selected]="category.selected"
+        (selectionChange)="selectChip($event, category)"
+      >
+        {{ category.name }}
+      </mat-chip-option>
+    </mat-chip-set>
+  </div>
+</ng-container>
