--- a/src/app/movie-edit/movie-edit.component.html
+++ b/src/app/movie-edit/movie-edit.component.html
@@ -13,18 +13,13 @@
       </mat-error>
     </mat-form-field>
 
-    <!-- Genre -->
+    <!-- Category -->
     <app-select-with-search
-      [label]="'Genre'"
-      [control]="genreCtrl"
-      [items]="genres"
+      [label]="'Category'"
+      [control]="categoryCtrl"
+      [items]="categoryItems"
     ></app-select-with-search>
-    <mat-error *ngIf="showError('genre', 'required')"
-      >Genre is required</mat-error
-    >
-    <mat-error *ngIf="showError('genre', 'minlength', 'maxlength')">
-      Genre must be between 1-100 characters
-    </mat-error>
+
 
     <!-- Release Year -->
     <mat-form-field>
