--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -30,7 +30,7 @@
         </mat-menu>
       </mat-card-header>
       <mat-card-content class="movie-card-content">
-        <p>{{ movie.genre }}</p>
+        <p>{{ getCategoryNames(movie) }}</p>
         <p>{{ movie.director }}</p>
       </mat-card-content>
     </mat-card>
