--- a/src/app/shared/components/select-with-search/select-with-search.component.html
+++ b/src/app/shared/components/select-with-search/select-with-search.component.html
@@ -1,8 +1,11 @@
 <mat-form-field>
   <mat-label>{{ label }}</mat-label>
   <mat-select [formControl]="control" multiple>
-    <mat-option *ngFor="let item of items" [value]="item.label">{{
+    <mat-option *ngFor="let item of items" [value]="item.id">{{
       item.label
     }}</mat-option>
   </mat-select>
+  <mat-error *ngIf="control.hasError('required')"
+    >{{ label }} is required</mat-error
+  >
 </mat-form-field>
