--- a/src/app/categories/category.component.scss
+++ b/src/app/categories/category.component.scss
@@ -1,4 +1,10 @@
 .chip-container {
   padding: 0 20px 20px 20px;
   width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.add-button {
+  margin-left: 8px;
 }
