--- a/src/app/category-edit/category-edit.component.html
+++ b/src/app/category-edit/category-edit.component.html
@@ -3,9 +3,7 @@
   <mat-form-field>
     <mat-label>Name</mat-label>
     <input matInput [formControl]="categoryNameCtrl" />
-    <mat-error *ngIf="showError(categoryNameCtrl, 'required')"
-      >Name is required</mat-error
-    >
+    <mat-error *ngIf="showError('required')">Name is required</mat-error>
   </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions [align]="'end'">
