--- a/src/app/category-edit/category-edit.component.html
+++ b/src/app/category-edit/category-edit.component.html
@@ -4,6 +4,10 @@
     <mat-label>Name</mat-label>
     <input matInput [formControl]="categoryNameCtrl" />
     <mat-error *ngIf="showError('required')">Name is required</mat-error>
+    <mat-error *ngIf="showError('noWhitespace')"
+      >Value cannot be empty</mat-error
+    >
+    <mat-error *ngIf="showError('nameExists')">Name already exists</mat-error>
   </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions [align]="'end'">
