deleting selected chips should remove it from filtered movies

--- a/src/app/categories/category.component.html
+++ b/src/app/categories/category.component.html
@@ -21,5 +21,13 @@
     >
       <mat-icon> add </mat-icon>
     </button>
+    <button
+      mat-raised-button
+      color="warn"
+      class="add-button"
+      (click)="addDummyCategories()"
+    >
+      {{ 'Add dummy categories' }}
+    </button>
   </div>
 </ng-container>
