--- a/src/app/shared/components/search-bar/seach-bar.component.html
+++ b/src/app/shared/components/search-bar/seach-bar.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="search-bar" appearance="outline">
-  <mat-label>Search...</mat-label>
+  <mat-label>{{ placeholder }}</mat-label>
   <mat-icon matPrefix>search</mat-icon>
   <input
     matInput
